unify crud pages
